# poc_maker

./: .env.example  .gitignore  AGENTS.md  PROJECT_FLOW_GUIDE.md  README.md  pyproject.toml
input/: sample_brd.md
prompts/: ba_review_prompt.md  ba_task_prompt.md  brd_extraction_prompt.md  dev_code_prompt.md  dev_review_prompt.md  qa_review_prompt.md  qa_test_plan_prompt.md  sa_architecture_prompt.md  sa_architecture_review_prompt.md  sa_dev_plan_prompt.md  sa_dev_plan_review_prompt.md
src/brd_agent/: __init__.py  config.py  main.py
src/brd_agent/llm/: client.py
src/brd_agent/schemas/: __init__.py  ba.py  brd.py  dev.py  qa.py  sa.py
src/brd_agent/services/: artifact_writer.py  ba_agent.py  brd_analyzer.py  brd_loader.py  consistency_gate.py  dev_agent.py  orchestrator.py  qa_agent.py  sa_agent.py  standards.py
src/brd_agent/templates/: architecture.md.j2  brd_gaps.md.j2  code_standards.md.j2  context.md.j2  dev_plan.md.j2  generated_code.md.j2  qa_test_cases.md.j2  qa_test_plan.md.j2  review_standards.md.j2  task.md.j2
tests/: test_analyzer.py  test_ba_agent.py  test_consistency_gate.py  test_dev_agent.py  test_llm_client.py  test_loader.py  test_pipeline.py  test_qa_agent.py  test_sa_agent.py  test_standards.py
